api: created endpoint to get all comments by chapter
