# docs/swagger.yaml
@@ -47,6 +47,21 @@ definitions:
       error:
         type: string
     type: object
+  api.PaginatedCommentsResponse:
+    properties:
+      items:
+        items:
+          $ref: '#/definitions/store.ChapterComment'
+        type: array
+      limit:
+        type: integer
+      page:
+        type: integer
+      total_items:
+        type: integer
+      total_pages:
+        type: integer
+    type: object
   api.RegisterUserRequest:
     properties:
       email:
@@ -282,6 +297,48 @@ paths:
       tags:
       - books
   /chapters/{chapter_id}/comments:
+    get:
+      consumes:
+      - application/json
+      description: Retrieves the comments of a specific chapter.
+      parameters:
+      - description: Chapter ID
+        in: path
+        name: chapter_id
+        required: true
+        type: integer
+      - default: 1
+        description: Page number
+        in: query
+        name: page
+        type: integer
+      - default: 20
+        description: Items per page
+        in: query
+        name: limit
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.PaginatedCommentsResponse'
+        "400":
+          description: 'Error: Invalid or missing id'
+          schema:
+            $ref: '#/definitions/api.HTTPError'
+        "404":
+          description: 'Error: Comment not found'
+          schema:
+            $ref: '#/definitions/api.HTTPError'
+        "500":
+          description: 'Error: Internal server error'
+          schema:
+            $ref: '#/definitions/api.HTTPError'
+      summary: Get the comments of a book's chapter
+      tags:
+      - comments
     post:
       consumes:
       - application/json
