# internal/api/chapter_comment_handler.go
@@ -13,12 +13,14 @@ import (
 
 type ChapterCommentHandler struct {
 	chapterCommentStore store.ChapterCommentStore
+	ChapterStore        store.ChapterStore
 	logger              *log.Logger
 }
 
-func NewChapterCommentHandler(commentStore store.ChapterCommentStore, logger *log.Logger) *ChapterCommentHandler {
+func NewChapterCommentHandler(commentStore store.ChapterCommentStore, chapterStore store.ChapterStore, logger *log.Logger) *ChapterCommentHandler {
 	return &ChapterCommentHandler{
 		chapterCommentStore: commentStore,
+		ChapterStore:        chapterStore,
 		logger:              logger,
 	}
 }
@@ -49,7 +51,16 @@ func (ch *ChapterCommentHandler) HandleAddComment(ctx *gin.Context) {
 		return
 	}
 
-	// TODO: Check that chapter exist
+	_, err = ch.ChapterStore.GetChapterByID(chapterID)
+	if err != nil {
+		if errors.Is(err, sql.ErrNoRows) {
+			ctx.JSON(http.StatusNotFound, gin.H{"error": "chapter not found"})
+			return
+		}
+		ch.logger.Printf("Error retrieving chapter by ID: %v", err)
+		ctx.JSON(http.StatusInternalServerError, gin.H{"error": "internal server error"})
+		return
+	}
 
 	var req AddChapterCommentRequest
 	if err := ctx.ShouldBindJSON(&req); err != nil {
@@ -185,6 +196,17 @@ func (ch *ChapterCommentHandler) HandleGetCommentById(ctx *gin.Context) {
 		return
 	}
 
+	_, err = ch.ChapterStore.GetChapterByID(chapterID)
+	if err != nil {
+		if errors.Is(err, sql.ErrNoRows) {
+			ctx.JSON(http.StatusNotFound, gin.H{"error": "chapter not found"})
+			return
+		}
+		ch.logger.Printf("Error retrieving chapter by ID: %v", err)
+		ctx.JSON(http.StatusInternalServerError, gin.H{"error": "internal server error"})
+		return
+	}
+
 	id, err := utils.ReadIDParam(ctx)
 	if err != nil {
 		ch.logger.Printf("ERROR: readIDParam %v", err)
@@ -272,4 +294,73 @@ func (ch *ChapterCommentHandler) HandleDeleteCommentById(ctx *gin.Context) {
 		ch.logger.Printf("ERROR: updateComment %v", err)
 		ctx.JSON(http.StatusInternalServerError, gin.H{"error": "internal server error"})
 	}
+}
+
+type PaginatedCommentsResponse struct {
+	Items      []*store.ChapterComment `json:"items"`
+	Page       int                     `json:"page"`
+	Limit      int                     `json:"limit"`
+	TotalItems int                     `json:"total_items"`
+	TotalPages int                     `json:"total_pages"`
+}
+
+// HandleGetCommentsByChapterID godoc
+// @Summary      Get the comments of a book's chapter
+// @Description  Retrieves the comments of a specific chapter.
+//
+//	Provide a valid chapter_id as a path and  parameter. Returns the paginated comments object on success.
+//
+// @Tags         comments
+// @Accept       json
+// @Produce      json
+// @Param        chapter_id path int true "Chapter ID"
+// @Param        page query int false "Page number" default(1)
+// @Param        limit query int false "Items per page" default(20)
+// @Success      200 {object} PaginatedCommentsResponse
+// @Failure      400 {object} HTTPError "Error: Invalid or missing id"
+// @Failure      404 {object} HTTPError "Error: Comment not found"
+// @Failure      500 {object} HTTPError "Error: Internal server error"
+// @Router       /chapters/{chapter_id}/comments [get]
+func (ch *ChapterCommentHandler) HandleGetCommentsByChapterID(ctx *gin.Context) {
+	chapterID, err := utils.ReadChapterIDParam(ctx)
+	if err != nil {
+		ch.logger.Printf("ERROR: readChapterIDParam %v", err)
+		ctx.JSON(http.StatusBadRequest, gin.H{"error": "invalid chapter id"})
+		return
+	}
+
+	_, err = ch.ChapterStore.GetChapterByID(chapterID)
+	if err != nil {
+		if errors.Is(err, sql.ErrNoRows) {
+			ctx.JSON(http.StatusNotFound, gin.H{"error": "chapter not found"})
+			return
+		}
+		ch.logger.Printf("Error retrieving chapter by ID: %v", err)
+		ctx.JSON(http.StatusInternalServerError, gin.H{"error": "internal server error"})
+		return
+	}
+
+	page, limit, err := utils.ReadPaginationParams(ctx)
+	if err != nil {
+		ch.logger.Printf("ERROR: readPaginationParams %v", err)
+		ctx.JSON(http.StatusBadRequest, gin.H{"error": "invalid pagination parameters"})
+		return
+	}
+
+	comments, totalItems, err := ch.chapterCommentStore.GetCommentsByChapterID(chapterID, page, limit)
+	if err != nil {
+		ch.logger.Printf("ERROR: GetCommentsByChapterID %v", err)
+		ctx.JSON(http.StatusInternalServerError, gin.H{"error": "internal server error"})
+		return
+	}
+
+	totalPages := (totalItems + limit - 1) / limit
+
+	ctx.JSON(http.StatusOK, PaginatedCommentsResponse{
+		Items:      comments,
+		Page:       page,
+		Limit:      limit,
+		TotalItems: totalItems,
+		TotalPages: totalPages,
+	})
 }
